remove squash input - it didn't work - and prevent editing of locked nodes

--- a/css/prsm.css
+++ b/css/prsm.css
@@ -166,7 +166,7 @@ input[type='range'] {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	font-size: 20px;
-	overflow: hidden;
+	overflow: scroll;
 	outline: none;
 	color: black;
 	min-width: 160px;
